tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.diagnostic
diagnostic error code=L0001 family=lexer message="invalid Unicode scalar value in string escape" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.ari" bytes=60
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.ari" line=2 column=16 end_line=2 end_column=25 byte_start=34 byte_end=43 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.ari:2:16\n   |\n 2 |   let text = \"\\u{110000}\";\n   |                ^^^^^^^^^"
  Note index=0 location=none message="Unicode string escapes must name valid Unicode scalar values"
  Help index=0 location=none message="choose a code point in U+0000..U+10FFFF outside the surrogate range"
